@@ -1,3 +1,12 @@
+2024-10-07  Per Abrahamsen  <pa@plen.ku.dk>
+
+	* src/daisy/crop/root/rootdens_local.C
+	(RootdensLocal::internal_growth): Handle I_tot == 0.
+
+2024-09-18  Per Abrahamsen  <pa@plen.ku.dk>
+
+	* src/daisy/crop/production.C (ExfoliationFac): Fix unit.
+
 2024-06-20  Per Abrahamsen  <pa@plen.ku.dk>
 
 	* src/daisy/upper_boundary/bioclimate/svat_ssoc.C
